tests/istio/oidc-authservice/base/test_data/expected/apps_v1_statefulset_authservice.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authservice
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  serviceName: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          value: ""
        - name: USERID_PREFIX
          value: ""
        - name: USERID_CLAIM
          value: email
        - name: OIDC_PROVIDER
          value: ""
        - name: OIDC_AUTH_URL
          value: ""
        - name: OIDC_SCOPES
          value: profile email groups
        - name: REDIRECT_URL
          value: ""
        - name: SKIP_AUTH_URI
          value: ""
        - name: PORT
          value: "8080"
        - name: CLIENT_ID
          value: ldapdexapp
        - name: CLIENT_SECRET
          value: pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
        - name: STORE_PATH
          value: /var/lib/authservice/data.db
        image: gcr.io/arrikto/kubeflow/oidc-authservice:28c59ef
        imagePullPolicy: IfNotPresent
        name: authservice
        ports:
        - containerPort: 8080
          name: http-api
        readinessProbe:
          httpGet:
            path: /
            port: 8081
        volumeMounts:
        - mountPath: /var/lib/authservice
          name: data
      securityContext:
        fsGroup: 111
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authservice-pvc
