tests/istio/oidc-authservice/base/test_data/expected/~g_v1_configmap_oidc-authservice-parameters.yaml
apiVersion: v1
data:
  application_secret: pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
  client_id: ldapdexapp
  namespace: istio-system
  oidc_auth_url: ""
  oidc_provider: ""
  oidc_redirect_uri: ""
  skip_auth_uri: ""
  userid-header: ""
  userid-prefix: ""
kind: ConfigMap
metadata:
  name: oidc-authservice-parameters
  namespace: istio-system
